@@ -1,3 +1,8 @@
+2015-07-28  Iain Buclaw  <ibuclaw@gdcproject.org>
+
+	* configure.in: Add asprintf and vasprintf to AC_CHECK_DECLS.
+	* config.in, configure: Regenerate.
+
 2015-07-06  Joel Brobecker  <brobecker@adacore.com>
 
 	* development.sh (development): Set to false.
